fixed nav bar + exercise gap

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,36 +1,47 @@
 .navbar {
   display: flex;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  right: 0; 
+  height: 100px; 
   justify-content: space-between; 
   align-items: center;
-  width: 100%;
+  width: 100vw; 
   background: #FFF;
   box-shadow: 0px 2px 4px 2px #6E605F;
   z-index: 1000;
-  padding: 15px 30px;
-  }
-  
-  .navbar ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-  }
-  
-  .navbar a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    align-items: center;
-  }
+  padding: 20px 50px; 
+}
 
 
-  .navbar-Title{
-    font-size: 30px;
-    padding-right: 75px;
-  }
+.navbar ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
 
-  .navbar img{
-    width: 20px;
-    height:20px;
-    padding-right: 10px;
-    align-items: center;
-  }
+.navbar a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px 15px; 
+}
+
+.navbar-Title {
+  font-size: 30px;
+  font-weight: bold;
+  padding-right: 75px;
+  white-space: nowrap; 
+}
+
+.navbar img {
+  width: 25px; 
+  height: 25px;
+  margin-right: 10px; 
+  vertical-align: middle;
+}
