--- a/src/pages/Exercises.css
+++ b/src/pages/Exercises.css
@@ -1,8 +1,15 @@
+
+.exercises-Title{
+    font-size: 32px;
+    font-weight: 300;
+    padding-top: 100px;
+}
+
 /* Styling for board rows */
 .board-row {
     display: flex;
-    justify-content: space-around; 
-    gap: 20px;
+    justify-content: center;
+    gap: 64px;
     margin-bottom: 20px; 
   }
   
@@ -11,8 +18,8 @@
     display: flex;
     justify-content: flex-start; 
     align-items: flex-end; 
-    width: 513px;
-    height: 310px;
+    width: 500px;
+    height: 300px;
     background-color: #F8D3C3; 
     border-radius: 30px;
     padding: 16px 27px;
